--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -11,7 +11,7 @@
           Servicios
         </a>
         <a routerLink="/tracking" class="text-gray-600 hover:text-blue-600 transition-colors">
-          Seguimmiento del pedido
+          Seguimiento del pedido
         </a>
         <a routerLink="/inventory" class="text-gray-600 hover:text-blue-600 transition-colors">
           Nuestros Bisontes
