register y home listos

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -154,7 +154,7 @@
                 </li>
                 <li>
                   <a routerLink="/services" class="hover:text-white transition-colors">
-                    Entrega urgente
+                    Entrega express
                   </a>
                 </li>
               </ul>
