--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -56,7 +56,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
         <app-card 
           class="h-full flex flex-col" 
-          title="Nacion del aire" 
+          title="Nación del aire" 
           description="Entregas rápidas a los Templos del Aire y ciudades flotantes" 
           [icon]="Wind"
           color="orange"
@@ -70,7 +70,7 @@
         />
         <app-card 
           class="h-full flex flex-col" 
-          title="Nacion del fuego" 
+          title="Nación del fuego" 
           description="Paso seguro a través de los territorios e islas de la Nación del Fuego" 
           [icon]="Flame"
           color="red"
